deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-doctor
  namespace: redis-doctor
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redis-doctor
  ports:
    - { name: http, port: 8099, targetPort: http }
